ejercicio del RelativeLayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignParentBottom="false"
     android:layout_margin="20dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button_toast"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Toast"
-        android:layout_margin="0dp"
-        android:padding="0dp"/>
+        android:padding="0dp"
+        android:text="Toast" />
 
     <TextView
         android:id="@+id/show_count"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="10"
+        android:layout_toEndOf="@+id/button_toast"
+        android:layout_toRightOf="@+id/button_toast"
         android:background="@color/yellow"
-        android:textColor="@color/purple_700"
         android:gravity="center"
-        android:textSize="96sp" />
+        android:text="@string/valor_inicial_cuenta"
+        android:textColor="@color/purple_700"
+        android:textSize="180sp" />
 
     <Button
         android:id="@+id/button_count"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="sumarUno"
-        android:text="Count" />
+        android:text="Count"
+        android:layout_below="@+id/button_toast"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
